--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,13 @@
 [tox]
-envlist = py{27,34,35,36}-django1{8,11},py{34,35,36}-django20
+envlist = py{27,34,35,36}-django111,py{35,36,37}-django22,py{36,37,38}-django30
 
 [testenv]
 setenv =
     PYTHONDONTWRITEBYTECODE=1
 deps =
-    django18: Django>=1.8,<1.9
     django111: Django>=1.11,<2.0
-    django20: Django>=2.0,<2.1
+    django22: Django>=2.2,<3.0
+    django30 Django>=3.0,<3.1
     -rtests/requirements.txt
     coverage
 commands = ./runtests.py {posargs}
