--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ setenv =
 deps =
     django111: Django>=1.11,<2.0
     django22: Django>=2.2,<3.0
-    django30 Django>=3.0,<3.1
+    django30: Django>=3.0,<3.1
     -rtests/requirements.txt
     coverage
 commands = ./runtests.py {posargs}
