--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,6 +1,7 @@
 funcsigs==1.0.2
 mock==3.0.5
 pbr==5.4.4
-Pillow==6.2.1
+Pillow==5.4.1; python_version < '3.5'
+Pillow==6.2.1; python_version >= '3.5'
 six==1.12.0
 wheel==0.33.6
